<!-- TODO: Translate to English? -->
<resources>
    <string name="app_name">Taksipalvelu</string>
    <string name="order_ride_button">Tilaa kyyti</string>
    <string name="address_info">Osoite: Rantakatu 14, 67100 Kokkola\nPuh.: 06 8241000</string>
    <string name="ride_coming">TAKSI ON TULOSSA</string>
    <string name="order_information">Tilaustiedot</string>
    <string name="cancel_button">Peruuta tilaus</string>
    <string name="ride_order">KYYDIN TILAUS</string>
    <string name="hint_text">Lisätietoja tai toiveita kuljettajalle</string>
    <string name="return_button">Palaa aloitussivulle</string>
    <string name="exit_message">Please click BACK again to exit</string>
    <string name="menu_options">Matkustajien lukumäärä\n
                                \n
                                Matkatavaroiden koko\n
                                \n
                                Pyörätuolipaikka\n
                                \n
                                Muuta huomioitavaa</string>
    <string name="order_info">Tilausnumero\n
                                \n
                                Arvioitu saapumisaika\n
                                \n
                                Arvioitu hinta\n
                                \n</string>
    <string-array name="passenger_options">
        <item>1–4</item>
        <item>5–8</item>
        <item>9–10</item>
    </string-array>
    <string-array name="luggage_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>
