<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/ride_order"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <TextView
        android:id="@+id/order_desc"
        android:layout_width="202dp"
        android:layout_height="292dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/menu_options"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_title" />

    <Button
        android:id="@+id/button_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorButton"
        android:text="@string/order_ride_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/order_desc"
        app:layout_constraintTop_toBottomOf="@+id/spinner_luggage" />

    <EditText
        android:id="@+id/extraInfo"
        android:layout_width="271dp"
        android:layout_height="106dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_text"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/order_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spinner_passenger"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="92dp"
        android:entries="@array/passenger_options"
        app:layout_constraintStart_toEndOf="@+id/order_desc"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <Spinner
        android:id="@+id/spinner_luggage"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:entries="@array/luggage_size"
        app:layout_constraintStart_toEndOf="@+id/order_desc"
        app:layout_constraintTop_toBottomOf="@+id/spinner_passenger" />

</android.support.constraint.ConstraintLayout>